# trace-stats

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/trace_stats/: __init__.py  __main__.py  core.py
src/trace_stats.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_stats.py
